--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Site settings
 name: eacabbi.github.io
-title: Edoardo Maria Acabbi
+title: Luca Mazzone
 description: Assistant Professor at UC3M.
 repo: https://github.com/ildodo12/website
 url: https://eacabbi.github.io
