--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ google_analytics: UA-179129314-1
 google-site-verification: EjDn9NB75Ybc73Rp6H3LzGkSFajoB4_PGmSHZUPYT3o
 
 # Personal info
-author: Edoardo Maria Acabbi
-first_name: Edoardo Maria
-last_name: Acabbi
+author: Luca Mazzone
+first_name: Luca
+last_name: Mazzone
 university: Universidad Carlos III de Madrid
 department: Depto. de Economia de la Empresa
 address: C/Madrid 126, 28903 Getafe, ES
