--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ address: 720 19th Street, NW, Washington, DC
 office:  
 email: lmazzone@imf.org
 email2: luca.g.mazzone@gmail.com
+phone: +1 2028941615
 
 # Icon settings
 doi_icon: ai ai-doi
