--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 name: eacabbi.github.io
 title: Luca Mazzone
-description: Economist at the International Monetary Fund
+description: Assistant Professor of Economics at CERGE-EI
 repo: https://github.com/lucamazzone/lucamazzone.github.io
 url: https://lucamazzone.github.io
 baseurl: /lucamazzone.github.io
@@ -13,13 +13,13 @@ google-site-verification: dZbJAaEZ9uPqYDHfbz1xiqCo76-ru7jmZ9Na3yPA4iY
 author: Luca Mazzone
 first_name: Luca
 last_name: Mazzone
-university: International Monetary Fund
-department: European Department
-address: 720 19th Street, NW, Washington, DC
-office:  
-email: lmazzone@imf.org
+university: CERGE-EI
+department: Economics
+address: Politických vězňů 7, 110 00 Nové Město, Prague (CZ)
+office: 303
+email: luca.mazzone@cerge-ei.cz
 email2: luca.g.mazzone@gmail.com
-phone: +1 2028941615
+phone: +1 2027714748310
 
 # Icon settings
 doi_icon: ai ai-doi
