--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-name: eacabbi.github.io
+name: lucamazzone.github.io
 title: Luca Mazzone
 description: Assistant Professor of Economics at CERGE-EI
 repo: https://github.com/lucamazzone/lucamazzone.github.io
