--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ google-site-verification: dZbJAaEZ9uPqYDHfbz1xiqCo76-ru7jmZ9Na3yPA4iY
 author: Luca Mazzone
 first_name: Luca
 last_name: Mazzone
-university: CERGE-EI
+university: University of Montreal
 department: Economics
-address: Politických vězňů 7, 110 00 Nové Město, Prague (CZ)
-office: 303
-email: luca.mazzone@cerge-ei.cz
+address: Lionel Groulx Building, 3150 rue Jean-Brillant Montréal QC
+office: C-6027
+email: luca.mazzone@umontreal.ca
 email2: luca.g.mazzone@gmail.com
 phone: +1 2027714748310
 
