Update address format in _config.yml
Removed 'Lionel Groulx Building' from the address.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ first_name: Luca
 last_name: Mazzone
 university: University of Montreal
 department: Economics
-address: Lionel Groulx Building, 3150 rue Jean-Brillant Montréal QC
+address: 3150 rue Jean-Brillant Montréal QC
 office: C-6027
 email: luca.mazzone@umontreal.ca
 email2: luca.g.mazzone@gmail.com
