Update description in config file

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 name: lucamazzone.github.io
 title: Luca Mazzone
-description: Assistant Professor of Economics at CERGE-EI
+description: Assistant Professor of Economics at University of Montreal
 repo: https://github.com/lucamazzone/lucamazzone.github.io
 url: https://lucamazzone.github.io
 baseurl: /lucamazzone.github.io
